# synthetic-disagreement

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-python.yml
docs/: methodology.md
examples/: synthetic_items.json
src/synthetic_disagreement/: __init__.py  generators.py  stress_test.py
src/synthetic_disagreement/noise_models/: __init__.py  adversarial.py  biased.py  drift.py  ordinal_slip.py  uniform.py
tests/: test_synthetic_disagreement.py
