[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-disagreement"
version = "0.1.1"
description = "Controlled synthetic annotator disagreement generator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AuraOne" }]
classifiers = ["Development Status :: 3 - Alpha", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
dependencies = ["iaa-kit>=0.1.0", "numpy>=1.23"]

[project.urls]
Homepage = "https://auraone.ai/open"
Source = "https://github.com/auraoneai/synthetic-disagreement"



[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
